log
Thu Apr 16 08:24:59 PM UTC 2026: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:67:22: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   67 |         map->current = map->buckets[posicion];
      |                      ^
hashmap.c:78:26: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   78 |             map->current = map->buckets[posicion];
      |                          ^
27dddb1
Thu Apr 16 08:25:25 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|6
total_score: 10/60
cab00c0
Thu Apr 16 08:50:25 PM UTC 2026: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  2|7
total_score: 0/60
595b08b
Thu Apr 16 08:52:07 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:74:30: error: expected ‘;’ before ‘}’ token
   74 |             posicion = modulo
      |                              ^
      |                              ;
   75 |         }
      |         ~                     
hashmap.c:77:26: error: ‘modulo’ undeclared (first use in this function); did you mean ‘modfl’?
   77 |         if (map->buckets[modulo] == NULL) {
      |                          ^~~~~~
      |                          modfl
hashmap.c:77:26: note: each undeclared identifier is reported only once for each function it appears in
05a5fbb
Thu Apr 16 08:52:23 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:77:26: error: ‘modulo’ undeclared (first use in this function); did you mean ‘modfl’?
   77 |         if (map->buckets[modulo] == NULL) {
      |                          ^~~~~~
      |                          modfl
hashmap.c:77:26: note: each undeclared identifier is reported only once for each function it appears in
db45ff9
Thu Apr 16 08:52:45 PM UTC 2026: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|7
total_score: 0/60
4c86a3f
Thu Apr 16 08:53:16 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
78e1d8c
Thu Apr 16 08:55:19 PM UTC 2026: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  2|7
total_score: 0/60
324d98d
Thu Apr 16 08:56:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
af81d7e
Sun Apr 19 04:08:39 PM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:15: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   49 |     nuevo_mapa->capacity = capacity;
      |               ^~
hashmap.c:50:15: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   50 |     nuevo_mapa->size = 0;
      |               ^~
hashmap.c:53:23: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   53 |             nuevo_mapa->buckets[i] = NULL;
      |                       ^~
hashmap.c:55:15: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   55 |     nuevo_mapa->current = -1;
      |               ^~
20ea83a
Sun Apr 19 04:10:12 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:26: error: ‘nuevo_mapa’ is used uninitialized [-Werror=uninitialized]
   49 |     nuevo_mapa->capacity = capacity;
      |     ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
hashmap.c:48:14: note: ‘nuevo_mapa’ was declared here
   48 |     HashMap *nuevo_mapa;
      |              ^~~~~~~~~~
cc1: all warnings being treated as errors
65de545
Sun Apr 19 04:12:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
87208a8
Sun Apr 19 04:14:08 PM UTC 2026: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|6
total_score: 10/60
1baa245
Sun Apr 19 04:16:00 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
67e9e17
